environment/blade/overlay/app/bookinfo-reviews-v1-v2/istio/bookinfo-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: bookinfo-gateway
  namespace: bookinfo
spec:
  selector:
    service.istio.io/canonical-name: istio-ingressgateway-ns
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    tls:
      httpsRedirect: true
    hosts:
    - bookinfo.jad.solo.io
  - port:
      number: 443
      name: https
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: bookinfo
    hosts:
    - bookinfo.jad.solo.io
