environment/blade/overlay/app/bookinfo-reviews-v1-v2/istio/bookinfo-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: bookinfo-virtualservice
  namespace: bookinfo
spec:
  hosts:
  - bookinfo.jad.solo.io
  gateways:
  - bookinfo-gateway
  http:
  - match:
    - uri:
        exact: /productpage
    - uri:
        exact: /login
    - uri:
        exact: /logout
    - uri:
        prefix: /static
    route:
    - destination:
        host: productpage.bookinfo.svc.cluster.local
        port:
          number: 9080
